--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/dialog-observaciones-item-listchequeo/dialog-observaciones-item-listchequeo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/dialog-observaciones-item-listchequeo/dialog-observaciones-item-listchequeo.component.html
@@ -20,7 +20,7 @@
         {{ data.registro.listaChequeoItem.nombre }}
     </p>
     <ng-container *ngIf="this.data.esVerDetalle === true; else noEsVerDetalle">
-        <mat-card class="shipping-card">
+        <mat-card class="shipping-card var-main-gris">
             <mat-card-header class="header-card header-card--margin">
                 <mat-card-title class="header-card--text">
                     Observaciones
