--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-descuentos-direccion-tecnica/form-descuentos-direccion-tecnica.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-descuentos-direccion-tecnica/form-descuentos-direccion-tecnica.component.html
@@ -13,7 +13,7 @@
                 currency:' ':'symbol-narrow':'.0-0' }} </p>
 
             <div class="mt-1em" *ngFor="let descuento of descuentos.controls; index as i">
-                <mat-card class="shipping-card">
+                <mat-card class="shipping-card var-main-gris">
                     <mat-card-header class="header-card header-card--margin">
                         <mat-card-title class="header-card--text">
                             Descuento {{i+1}}
