--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/registrar-nueva-solicitud-pago/registrar-nueva-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/registrar-nueva-solicitud-pago/registrar-nueva-solicitud-pago.component.html
@@ -30,7 +30,7 @@
                             </mat-select>
                         </mat-form-field>
                     </div>
-                    <span class="icon-incompleto">
+                    <span class="icon-incompleto" style="margin-left: 1px;">
                         <img
                           class="icon-incompleto--img"
                           src="assets/img/icon/incompleto.svg"
