--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.scss
@@ -1,3 +1,9 @@
 .mat-button.mat-warn[disabled], .mat-button[disabled][disabled] {
     opacity: .5;
 }
+.mainGris{
+    border: 1px solid var(--fontColor) !important;
+}
+.textoGris{
+    color: var(--fontColor) !important;
+}
