--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/actualizar-tramite-racc/actualizar-tramite-racc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/actualizar-tramite-racc/actualizar-tramite-racc.component.html
@@ -13,7 +13,7 @@
             <p><strong>Número del contrato: </strong><em>{{actuacion?.numeroContrato}}</em></p>
             <p><strong>Tipo de Controversia: </strong><em>{{actuacion?.tipoControversia}}</em></p>
             <p><strong>Fecha de la actuación adelantada: </strong><em>{{actuacion?.fechaActuacion | date: 'dd/MM/yyyy'}}</em></p>
-            <p><strong>Actuación adelantada: </strong> <em>{{actuacion?.actuacionAdelantadaOtro}}</em></p>
+            <p><strong>Actuación adelantada: </strong> <em>{{actuacion?.actuacionAdelantadaString}}</em></p>
         </mat-card-content>
     </mat-card>
     <div class="tabs--actions">
