--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/detalle-avance-actua-derivadas/detalle-avance-actua-derivadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/detalle-avance-actua-derivadas/detalle-avance-actua-derivadas.component.html
@@ -16,7 +16,7 @@
     </p>
     <mat-card class="shipping-card mainGris">
         <mat-card-content align="left">
-            <p><strong>Actuación en la que se requiere participación o insumo de la fiduciaria: </strong>{{controversia?.numeroActuacionFormat}}</p>
+            <p><strong>Actuación en la que se requiere participación o insumo de la fiduciaria: </strong>{{controversia?.proximaActuacionCodigoString}}</p>
             <p><strong>Fecha de la actuación adelantada: </strong>{{controversia?.fechaActuacion | date:
                 'dd/MM/yyyy'}}</p>
             <p><strong>Descripción de la actuación adelantada: </strong></p>
