--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-solicitud-expensas/form-solicitud-expensas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-solicitud-expensas/form-solicitud-expensas.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
-    <mat-card class="shipping-card">
+    <mat-card class="shipping-card var-main-gris">
         <mat-card-header class="header-card header-card--margin">
             <mat-card-title class="header-card--text">
                 Expensas
