--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/validar-lista-chequeo/validar-lista-chequeo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/validar-lista-chequeo/validar-lista-chequeo.component.html
@@ -10,20 +10,20 @@
             <div class="table-responsive">
                 <table mat-table [dataSource]="getMatTable( solicitudPagoListaChequeo.solicitudPagoListaChequeoRespuesta )" matSort class="mat-elevation-z8">
                     <ng-container matColumnDef="item">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Item </th>
-                        <td mat-cell *matCellDef="let element; index as j" align="center"> <b>{{ j + 1 }}</b> </td>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="detalle"> Item </th>
+                        <td mat-cell *matCellDef="let element; index as j" align="center" class="detalle"> <b>{{ j + 1 }}</b> </td>
                     </ng-container>
                     <ng-container matColumnDef="documento">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Documento </th>
-                        <td mat-cell *matCellDef="let element" align="left" > <span class="supportBlack">{{ element.listaChequeoItem.nombre }}</span> </td>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="detalle"> Documento </th>
+                        <td mat-cell *matCellDef="let element" align="left"  class="detalle"> <span class="supportBlack">{{ element.listaChequeoItem.nombre }}</span> </td>
                     </ng-container>
                     <ng-container matColumnDef="revTecnica">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Revisión técnica </th>
-                        <td mat-cell *matCellDef="let element" align="center"> {{ getRevisionTecnica( element.respuestaCodigo ) }} </td>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="detalle"> Revisión técnica </th>
+                        <td mat-cell *matCellDef="let element" align="center" class="detalle"> {{ getRevisionTecnica( element.respuestaCodigo ) }} </td>
                     </ng-container>
                     <ng-container matColumnDef="observaciones">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Observaciones </th>
-                        <td mat-cell *matCellDef="let element; index as j" align="center">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="detalle"> Observaciones </th>
+                        <td mat-cell *matCellDef="let element; index as j" align="center" class="detalle">
                             <button mat-raised-button color="accent" class="btn-table " [class.sin-diligenciar]="element.item==1" *ngIf="element.respuestaCodigo === noCumpleCodigo"
                                 (click)="getObservacion( element, i, j )">Observaciones</button>
     
