--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/ver-detalle-expensas/ver-detalle-expensas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/ver-detalle-expensas/ver-detalle-expensas.component.html
@@ -6,7 +6,7 @@
             </a>
         </div>
         <h1 class="title-menu--h1">
-            Ver detalle/Editar solicitud de pago {{ solicitudPago.numeroSolicitud }}
+            Ver detalle solicitud de pago {{ solicitudPago.numeroSolicitud }}
         </h1>
     </section>
     <p class="info-sub-title supportBlack">
