--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-amortizacion/form-amortizacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-amortizacion/form-amortizacion.component.html
@@ -1,5 +1,5 @@
 <section>
-    <mat-card class="shipping-card">
+    <mat-card class="shipping-card var-main-gris">
         <mat-card-header class="header-card header-card--margin">
             <mat-card-title class="header-card--text">
                 Amortización del anticipo en el criterio de pago
