--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-datos-factura/obs-datos-factura.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-datos-factura/obs-datos-factura.component.html
@@ -1,5 +1,5 @@
 <section *ngIf="solicitudPago !== undefined">
-    <mat-card class="shipping-card">
+    <mat-card class="shipping-card var-main-gris">
         <mat-card-header class="header-card header-card--margin">
             <mat-card-title class="header-card--text">
                 Datos
