--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/expansion-panel-interventoria/expansion-panel-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/expansion-panel-interventoria/expansion-panel-interventoria.component.html
@@ -15,7 +15,11 @@
       </mat-panel-title>
     </mat-expansion-panel-header>
 
-    <app-form-registrar-novedad></app-form-registrar-novedad>
+    <app-form-registrar-novedad
+                                [proyecto]=proyecto
+                                [contrato]=contrato
+                                [novedad]=novedad>
+    </app-form-registrar-novedad>
 
   </mat-expansion-panel>
   <mat-expansion-panel class="expansion-style">
