--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/registrar-solicitud-interventoria/registrar-solicitud-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/registrar-solicitud-interventoria/registrar-solicitud-interventoria.component.html
@@ -23,8 +23,8 @@
             <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
               <mat-option class="autocomplete"
               (click)="seleccionAutocomplete(option)"
-               *ngFor="let option of filteredOptions | async"  [value]="option">
-               {{option}}
+               *ngFor="let option of filteredOptions | async" [value]="option.numeroContrato">
+                {{option.numeroContrato}}
               </mat-option>
             </mat-autocomplete>
           </mat-form-field>
@@ -33,7 +33,7 @@
       </div>
     </div>
   </div>
-  <div class="row justify-content-center animatedDown" *ngIf="numeroContrato.value">
+  <div class="row justify-content-center animatedDown" *ngIf="numeroContratoSeleccionado">
     <div class="col-md-8">
       <div class="row">
         <div class="pr-1">
@@ -41,7 +41,7 @@
         </div>
         <div class="col">
           <mat-form-field class="select-width">
-            <mat-select required [formControl]="novedadAplicada">
+            <mat-select required [formControl]="novedadAplicada" (selectionChange)="changeNovedadAplicada()">
               <mat-option *ngFor="let novedad of novedadesArray" [value]="novedad.value">
                 {{ novedad.name }}
               </mat-option>
@@ -52,7 +52,15 @@
     </div>
   </div>
 
-  <mat-card class="shipping-card var-main-gris animatedDown" *ngIf="novedadAplicada.value">
+  <div class="pt-3em animatedDown" *ngIf="novedadAplicada.value === false && proyectos" >
+    <app-tabla-proyectos-registrar-novedad
+                                            [listaProyectos]="proyectos"
+                                            (Proyecto)="seleccionarProyecto($event)"
+                                            >
+  </app-tabla-proyectos-registrar-novedad>
+  </div>
+
+  <mat-card class="shipping-card var-main-gris animatedDown" *ngIf="novedadAplicada.value !== undefined && contrato ">
     <mat-card-header class="header-card header-card--margin">
       <mat-card-title class="header-card--text">
         Datos del contrato
@@ -63,56 +71,75 @@
         <strong>
           Nombre del contratista:
         </strong>
-        Constructora Colpatria SAS
+        {{contrato?.contratacion.contratista.nombre}}
       </p>
       <p>
         <strong>Tipo de identificación:</strong>
         <span>
-          NIT
+          {{contrato?.contratacion.contratista.tipoIdentificacionNotMapped}}
         </span>
       </p>
       <p>
         <strong>
           Número de identificación
         </strong>
-        900.879.989
+        {{contrato?.contratacion.contratista.numeroIdentificacion}}
       </p>
-      <p>
+      <!-- <p>
         <strong>Tipo de intervención:</strong>
-        <span >
-          Remodelación
-        </span>
-      </p>
+        NPI Preguntar
+      </p> -->
       <p>
         <strong>Valor del contrato:</strong>
-        <span >
-          $ 130.000.000
-        </span>
+        {{contrato?.valor|currency:'':'symbol':'3.0'}}
       </p>
       <p>
         <strong>Plazo:</strong>
-        <span >
-          24 meses / 25 días
-        </span>
+        {{contrato?.plazoFase1PreMeses}} meses / {{contrato?.plazoFase1PreDias}} días
       </p>
       <p>
         <strong>Fecha de inicio de contrato:</strong>
-        <span >
-          25/06/2020
-        </span>
+        {{contrato?.fechaActaInicioFase1| date:'dd/MM/yyyy'}}
       </p>
       <p>
         <strong>Fecha de finalización de contrato:</strong>
-        <span >
-          20/07/2022
-        </span>
+        {{contrato?.fechaTerminacion| date:'dd/MM/yyyy'}}
       </p>
+
+      <div class="animatedDown" *ngIf="novedadAplicada.value === false && proyecto">
+        <h2 class="card-subTitle">Proyecto asociado</h2>
+        <p>
+          <strong>Llave MEN:</strong>
+          {{ proyecto.llaveMen }}
+        </p>
+        <p>
+          <strong>Departamento:</strong>
+          {{ proyecto.departamento }}
+        </p>
+        <p>
+          <strong>Municipio:</strong>
+          {{ proyecto.municipio }}
+        </p>
+        <p>
+          <strong>Institución educativa:</strong>
+          {{ proyecto.institucionEducativa }}
+        </p>
+        <p>
+          <strong>Sede:</strong>
+          {{ proyecto.sede }}
+        </p>
+      </div>
 
     </mat-card-content>
   </mat-card>
 
-  <div class="animatedDown" *ngIf="novedadAplicada.value">
-    <app-expansion-panel-interventoria></app-expansion-panel-interventoria>
+  <div class="animatedDown" 
+        *ngIf="(novedadAplicada.value == true && contrato) || ( novedadAplicada.value == false && proyecto)">
+    <app-expansion-panel-interventoria
+                                      [proyecto]=proyecto
+                                      [contrato]=contrato
+                                      [novedad]=novedad>
+  </app-expansion-panel-interventoria>
   </div>
 
 </section>
