--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/home/home.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/home/home.component.html
@@ -37,7 +37,8 @@
   </div>
   <div *ngIf="interventoria" class="animatedDown">
     <div class="mt-2em mb-2em">
-      <a routerLink="registrarSolicitudInterventoria" mat-raised-button color="accent" class="line-25 px-2em">
+      <a (click)="registrarSolicitud()"
+           mat-raised-button color="accent" class="line-25 px-2em">
         Registrar solicitud de novedad
       </a>
     </div>
