--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
@@ -12,9 +12,9 @@
   <table mat-table [dataSource]="dataSource" matSort>
 
     <!-- fechaSolicitud Column -->
-    <ng-container matColumnDef="fechaSolicitud">
+    <ng-container matColumnDef="fechaSolictud">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha de solicitud de la novedad</th>
-      <td mat-cell *matCellDef="let element"><b>{{element.fechaSolicitud}}</b></td>
+      <td mat-cell *matCellDef="let element"><b>{{element.fechaSolictud | date: 'dd/MM/yyyy'}}</b></td>
     </ng-container>
 
     <!-- numeroSolicitud Column -->
@@ -24,54 +24,90 @@
     </ng-container>
 
     <!-- tipoNovedad Column -->
-    <ng-container matColumnDef="tipoNovedad">
+    <ng-container matColumnDef="tipoNovedadNombre">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de novedad</th>
-      <td mat-cell *matCellDef="let element">{{element.tipoNovedad}}</td>
+      <td mat-cell *matCellDef="let element">{{element.novedadesSeleccionadas}}</td>
     </ng-container>
 
     <!-- estadoNovedad Column -->
-    <ng-container matColumnDef="estadoNovedad">
+    <ng-container matColumnDef="estadoNovedadNombre">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado de la novedad</th>
-      <td mat-cell *matCellDef="let element">{{element.estadoNovedad}}</td>
+      <td mat-cell *matCellDef="let element">{{element.estadoCodigoNombre}}</td>
     </ng-container>
 
     <!-- estadoRegistro Column -->
-    <ng-container matColumnDef="estadoRegistro">
+    <ng-container matColumnDef="registroCompleto">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado del registro</th>
       <td mat-cell *matCellDef="let element">
-        <span class="info-text d-block m-0"
-        [class.sin-diligenciar]="element.estadoRegistro === 'Sin diligenciar'"
-        [class.en-proceso]="element.estadoRegistro === 'En proceso'"
-        [class.completo]="element.estadoRegistro === 'Completo'"
-        ></span>
-        {{element.estadoRegistro}}
+        <span class="info-text d-block m-0" 
+          [class.sin-diligenciar]="element.registroCompleto !== true"
+          [class.completo]="element.registroCompleto === true"></span>
+        {{element.registroCompleto === true ? 'Completo' : 'Incompleto'}}
       </td>
     </ng-container>
 
     <!-- Id Column -->
-    <ng-container matColumnDef="id">
+    <ng-container matColumnDef="novedadContractualId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
       <td mat-cell *matCellDef="let element">
-        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-          [routerLink]="[ 'verDetalleSolicitudNovedadInterventoria', element.id ]">
+        <a mat-button 
+                      color="warn" 
+                      mat-raised-button 
+                      color="accent" 
+                      class="btn-table"
+                      [routerLink]="[ 'verDetalleSolicitudNovedadInterventoria', element.novedadContractualId ]"
+                      *ngIf="element.estadoCodigo !== '2' && element.estadoCodigo !== '3'"
+                      >
           Ver detalle
         </a>
-        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-          [routerLink]="[ 'qwerty', element.id ]">
-          Aprobar solicitud
-        </a>
-        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-          [routerLink]="[ 'qwerty', element.id ]">
+
+        <button mat-button 
+                          color="warn" 
+                          mat-raised-button 
+                          color="accent" 
+                          class="btn-table" 
+                          type="button"
+                          (click)="verificarSolicitud(element.novedadContractualId)"
+                          *ngIf="element.estadoCodigo === '3' && element.registroCompleto === true"
+                          >
+        Enviar al supervisor
+        </button>
+
+        <button mat-button 
+                          color="warn" 
+                          mat-raised-button 
+                          color="accent" 
+                          class="btn-table" 
+                          type="button"
+                          (click)="rechazarSolicitud(element.novedadContractualId)"
+                          *ngIf="element.estadoCodigo === '3' && element.registroCompleto === true"
+                          >
           Rechazar solicitud
-        </a>
-        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-          [routerLink]="[ 'qwerty', element.id ]">
+        </button>
+
+        <a mat-button 
+                      color="warn" 
+                      mat-raised-button 
+                      color="accent" 
+                      class="btn-table"
+                      [routerLink]="[ '/verificarSolicitudDeNovedades/registrarSolicitudInterventoria', element.novedadContractualId ]"
+                      *ngIf="element.estadoCodigo === '2' || element.estadoCodigo === '3'"
+                      >
           Ver detalle/Editar
         </a>
-        <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
-          [routerLink]="[ 'qwerty', element.id ]">
+
+        <button mat-button 
+                          color="warn" 
+                          mat-raised-button 
+                          color="accent" 
+                          class="btn-table" 
+                          type="button"
+                          (click)="openDialogSiNo('', '<b>¿Está seguro de eliminar este registro?</b>',element.novedadContractualId)"
+                          *ngIf="element.estadoCodigo === '2' || element.estadoCodigo === '3'"
+          >
           Eliminar
-        </a>
+        </button>
+
       </td>
     </ng-container>
 
