--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container" *ngIf="novedad">
   <div class="container text-center">
     <div class="text-right">
       <a routerLink="../.." mat-button color="primary" class="btn-regresar">
@@ -9,7 +9,7 @@
       Ver detalle registro solicitud de novedad
     </h1>
     <p class="mt-05em color-mainColor">
-      Número de contrato <b>A887654344</b>
+      Número de contrato <b>{{ novedad.contrato.numeroContrato }}</b>
     </p>
   </div>
 
@@ -24,33 +24,33 @@
         <strong>
           Nombre del contratista:
         </strong>
-        Constructora Colpatria SAS
+        {{ novedad.contrato.contratacion.contratista.nombre }}
       </p>
       <p>
         <strong>Tipo de identificación:</strong>
         <span>
-          NIT
+          {{ novedad.contrato.contratacion.contratista.tipoIdentificacionNotMapped }}
         </span>
       </p>
       <p>
         <strong>
           Número de identificación
         </strong>
-        900.879.989
+        {{ novedad.contrato.contratacion.contratista.numeroIdentificacion }}
       </p>
       <p>
         <strong>Tipo de intervención:</strong>
         <span>
-          Remodelación
+          {{ novedad.proyectosContrato[0].tipoIntervencion }}
         </span>
       </p>
       <p>
         <strong>Valor del contrato:</strong>
         <span>
-          $ 130.000.000
+          {{ novedad.proyectosContrato[0].valorTotal }}
         </span>
       </p>
-      <p>
+      <!-- <p>
         <strong>Plazo:</strong>
         <span>
           24 meses / 25 días
@@ -67,7 +67,7 @@
         <span>
           20/07/2022
         </span>
-      </p>
+      </p> -->
 
     </mat-card-content>
   </mat-card>
@@ -86,36 +86,36 @@
             <strong>
               Fecha de solicitud de la novedad :
             </strong>
-            17/10/2020
+            {{ novedad.fechaSolictud }}
           </p>
           <p>
             <strong>
               Instancia donde se presentó la solicitud :
             </strong>
             <span>
-              Comité de obra
+              {{ novedad.instanciaCodigo }}
             </span>
           </p>
           <p>
             <strong>
               Fecha de la sesión de la instancia :
             </strong>
-            12/10/2020
+            {{ novedad.fechaSesionInstancia }}
           </p>
-          <p>
+          <!-- <p>
             <strong>
               Tipo de Novedad :
             </strong>
             Modificación de Condiciones Contractuales
-          </p>
+          </p> -->
 
         </mat-card-content>
       </mat-card>
       <mat-accordion>
-        <mat-expansion-panel class="expansion-style sub-expansion">
+        <mat-expansion-panel class="expansion-style sub-expansion" *ngFor=" let descripcion of novedad.novedadContractualDescripcion; let i = index; ">
           <mat-expansion-panel-header class="expansion-style--header">
             <mat-panel-title class="expansion-style--title">
-              Novedad 1
+              Novedad {{ 1 + i }}
             </mat-panel-title>
           </mat-expansion-panel-header>
           <mat-card class="shipping-card var-main-gris">
@@ -144,93 +144,6 @@
               <p><strong>Número de radicado en FFIE de solicitud: </strong> xxxxxxxxxxxxxxxxxx</p>
             </mat-card-content>
           </mat-card>
-        </mat-expansion-panel>
-        <mat-expansion-panel class="expansion-style sub-expansion">
-          <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title">
-              Novedad 2
-            </mat-panel-title>
-          </mat-expansion-panel-header>
-          <mat-card class="shipping-card var-main-gris">
-            <mat-card-header class="header-card header-card--margin">
-              <mat-card-title class="header-card--text textoGris">
-                Adición
-              </mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-              <p><strong>Motivos de la novedad :</strong>xxxxxxxx </p>
-              <p><strong>Resumen de la justificación de la novedad: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <p><strong>Presupuesto adicional solicitado:</strong>xxxxxxxxxxxxx </p>
-              <p><strong>¿Cuenta con la documentación soporte suficiente?:</strong>No </p>
-              <p><strong>Concepto técnico: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <p><strong>Fecha concepto técnico: </strong> xxxxxxxxxxxxxxxxxx</p>
-              <p><strong>Número de radicado en FFIE de solicitud: </strong> xxxxxxxxxxxxxxxxxx</p>
-            </mat-card-content>
-          </mat-card>
-        </mat-expansion-panel>
-        <mat-expansion-panel class="expansion-style sub-expansion">
-          <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title">
-              Novedad 3
-            </mat-panel-title>
-          </mat-expansion-panel-header>
-          <mat-card class="shipping-card var-main-gris">
-            <mat-card-header class="header-card header-card--margin">
-              <mat-card-title class="header-card--text textoGris">
-                Modificaciones de condiciones contractuales
-              </mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-              <p><strong>Motivos de la novedad :</strong>xxxxxxxx </p>
-              <p><strong>Resumen de la justificación de la novedad: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <mat-card-title class="header-card--text sub-text">
-                Clausula 1
-              </mat-card-title>
-              <p><strong>Cláusula a modificar: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <p><strong>Ajuste solicitado a la cláusula: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <mat-card-title class="header-card--text sub-text">
-                Clausula 2
-              </mat-card-title>
-              <p><strong>Cláusula a modificar: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <p><strong>Ajuste solicitado a la cláusula: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <p><strong>¿Cuenta con la documentación soporte suficiente?:</strong>No </p>
-              <p><strong>Concepto técnico: </strong></p>
-              <p>
-                xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-              </p>
-              <p><strong>Fecha concepto técnico: </strong> xxxxxxxxxxxxxxxxxx</p>
-              <p><strong>Número de radicado en FFIE de solicitud: </strong> xxxxxxxxxxxxxxxxxx</p>
-            </mat-card-content>
-          </mat-card>
-        </mat-expansion-panel>
-        <mat-expansion-panel class="expansion-style sub-expansion">
-          <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title">
-              Novedad 4
-            </mat-panel-title>
-          </mat-expansion-panel-header>
-          
         </mat-expansion-panel>
       </mat-accordion>
     </mat-expansion-panel>
